--- a/package.json
+++ b/package.json
@@ -7,22 +7,31 @@
     "start": "node ./build/index.js",
     "build": "tsc",
     "dev": "nodemon",
+    "migrate": "drizzle-kit generate:pg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@neondatabase/serverless": "^0.6.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "typescript": "^5.3.3"
+    "pg": "^8.11.3",
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "drizzle-kit": "^0.20.6",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
   }
